# alert_mcp

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/alert_mcp/: db.py  main.py  mcp_tools.py  models.py  schemas.py
src/alert_mcp_server/: README.md  app.py  config.py  requirements.txt  schemas.py  tools.py
src/alert_mcp_server/tests/: test_alert_mcp_server.py
tests/: test_alert_mcp.py
