[project]
name = "alert_mcp_server"
version = "0.1.0"
description = "Gradio MCP server for CredentialWatch alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio[mcp]",
    "httpx",
    "pydantic",
    "python-dotenv",
    "mcp"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio"
]
